add nonlinear model and notebook

--- a/notebooks/0_Algebra.ipynb
+++ b/notebooks/0_Algebra.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "This program use SymPy to symbolically derive several quantities that are described\n",
-    "in the notes: the (1) relaxation and buoyancy transfer functions, (2) the velocity\n",
+    "in the manuscript: the (1) relaxation and buoyancy transfer functions, (2) the velocity\n",
     "solutions, and (3) a limiting value of one of the eigenvalues of the problem.\n",
     "\n",
     "This file is best read/used in conjunction with the derivations in the manuscript."
@@ -29,13 +29,13 @@
     "import sympy as sp\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "k = sp.Symbol('k')\n",
+    "k = sp.Symbol('k')          # scaled wavenumber (H*wavenumber, where H=ice thickness)  \n",
     "expk = sp.exp(k)\n",
     "# use this matrix for floating ice:\n",
     "M = sp.Matrix(( [expk, -1/expk, k*expk,-k/expk], [expk, 1/expk, expk*(k+1),(k-1)/expk], [1, 1, 1,-1],[1,-1,0,0] ))\n",
     "\n",
-    "b1 = sp.Symbol('b1')                # proportional to h\n",
-    "b2 = sp.Symbol('b2')                # proportional to s\n",
+    "b1 = sp.Symbol('b1')                # proportional to -h\n",
+    "b2 = sp.Symbol('b2')                # proportional to delta*s\n",
     "\n",
     "# solution vector\n",
     "A,B,C,D = sp.symbols('A,B,C,D')\n",
@@ -66,18 +66,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   ⎛       2⋅k    4⋅k    ⎞      ⎛           k              3⋅k⎞\n",
-      "b₁⋅⎝- 4⋅k⋅ℯ    - ℯ    + 1⎠ + b₂⋅⎝(2⋅k - 2)⋅ℯ  + (2⋅k + 2)⋅ℯ   ⎠\n",
-      "───────────────────────────────────────────────────────────────\n",
-      "                   ⎛   2    ⎞  2⋅k    4⋅k                      \n",
-      "                   ⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1                  \n"
+      "         2⋅k    4⋅k       \n",
+      "  - 4⋅k⋅ℯ    - ℯ    + 1   \n",
+      "──────────────────────────\n",
+      "⎛   2    ⎞  2⋅k    4⋅k    \n",
+      "⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1\n",
+      "  ⎛               2⋅k    ⎞  k\n",
+      "2⋅⎝-k + (-k - 1)⋅ℯ    + 1⎠⋅ℯ \n",
+      "─────────────────────────────\n",
+      "  ⎛   2    ⎞  2⋅k    4⋅k     \n",
+      "  ⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1 \n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# # print the result (modulo a 1/k factor) for floating ice:\n",
-    "sp.pprint(sp.collect(sp.collect(sp.collect(sp.simplify(w_h),b1),b2),expk) )"
+    "# # print the result (modulo a H/k factor) for floating ice:\n",
+    "#sp.pprint(sp.collect(sp.collect(sp.collect(sp.simplify(w_h),b1),b2),expk) )\n",
+    "R = sp.collect(sp.simplify(w_h.subs(b1,1).subs(b2,0)),expk)\n",
+    "sp.pprint(R)\n",
+    "B = sp.collect(sp.simplify(-w_h.subs(b1,0).subs(b2,1)),expk)\n",
+    "sp.pprint(B)"
    ]
   },
   {
@@ -108,7 +117,7 @@
    "source": [
     "\n",
     "# Also need to print w_b for floating ice, since it is part of the solution\n",
-    "# (modulo a 1/k factor)\n",
+    "# (modulo a H/k factor)\n",
     "w_b = sol[0]+sol[1]\n",
     "\n",
     "# # print this:\n",
@@ -141,30 +150,24 @@
      "output_type": "stream",
      "text": [
       "h component:\n",
-      "    ⎛    ⎛     2⋅k    2⋅k    ⎞      2⋅k       ⎛      ⎛       2⋅k    ⎞      2⋅k\n",
-      "-b₁⋅⎝k⋅z⋅⎝2⋅k⋅ℯ    + ℯ    - 1⎠ + k⋅ℯ    + k + ⎝- k⋅z⋅⎝2⋅k + ℯ    - 1⎠ + k⋅ℯ   \n",
-      "──────────────────────────────────────────────────────────────────────────────\n",
-      "                                                   2  2⋅k    4⋅k      2⋅k     \n",
-      "                                                4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    - 1 \n",
-      "\n",
-      "        2⋅k    ⎞  2⋅k⋅z    2⋅k    ⎞  -k⋅(z - 1) \n",
-      " + k + ℯ    - 1⎠⋅ℯ      + ℯ    - 1⎠⋅ℯ           \n",
-      "────────────────────────────────────────────────\n",
-      "                                                \n",
-      "                                                \n",
+      "  ⎛     2⋅k        2⋅k    ⎞  k\n",
+      "2⋅⎝- k⋅ℯ    - k - ℯ    + 1⎠⋅ℯ \n",
+      "──────────────────────────────\n",
+      "   2  2⋅k    4⋅k      2⋅k     \n",
+      "4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    - 1 \n",
       "\n",
       " s component:\n",
-      "   ⎛⎛     2       ⎛       2⋅k    ⎞          2⋅k    ⎞  2⋅k   ⎛   2  2⋅k       ⎛\n",
-      "b₂⋅⎝⎝- 2⋅k  + k⋅z⋅⎝2⋅k + ℯ    - 1⎠ + 2⋅k + ℯ    - 1⎠⋅ℯ    + ⎝2⋅k ⋅ℯ    - k⋅z⋅⎝\n",
+      "⎛⎛     2       ⎛       2⋅k    ⎞          2⋅k    ⎞  2⋅k   ⎛   2  2⋅k       ⎛   \n",
+      "⎝⎝- 2⋅k  + k⋅z⋅⎝2⋅k + ℯ    - 1⎠ + 2⋅k + ℯ    - 1⎠⋅ℯ    + ⎝2⋅k ⋅ℯ    - k⋅z⋅⎝2⋅k\n",
       "──────────────────────────────────────────────────────────────────────────────\n",
-      "                                                        2  2⋅k    4⋅k      2⋅k\n",
-      "                                                     4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ   \n",
+      "                                                      2  2⋅k    4⋅k      2⋅k  \n",
+      "                                                   4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    -\n",
       "\n",
-      "     2⋅k    2⋅k    ⎞        2⋅k    2⋅k    ⎞  2⋅k⋅z⎞  -k⋅z\n",
-      "2⋅k⋅ℯ    + ℯ    - 1⎠ + 2⋅k⋅ℯ    + ℯ    - 1⎠⋅ℯ     ⎠⋅ℯ    \n",
-      "─────────────────────────────────────────────────────────\n",
-      "                                                         \n",
-      " - 1                                                     \n"
+      "  2⋅k    2⋅k    ⎞        2⋅k    2⋅k    ⎞  2⋅k⋅z⎞  -k⋅z\n",
+      "⋅ℯ    + ℯ    - 1⎠ + 2⋅k⋅ℯ    + ℯ    - 1⎠⋅ℯ     ⎠⋅ℯ    \n",
+      "──────────────────────────────────────────────────────\n",
+      "                                                      \n",
+      " 1                                                    \n"
      ]
     }
    ],
@@ -172,13 +175,13 @@
     "#---------------------- 2. VELOCITY SOLUTIONS------------------------------------\n",
     "z = sp.Symbol('z')          # depth\n",
     "\n",
-    "# w(z) modulo a 1/k factor\n",
+    "# w(z) modulo a H/k factor\n",
     "w = sp.exp(k*z)*sol[0] + (1/sp.exp(k*z))*sol[1] + k*z*sp.exp(k*z)*sol[2] + k*z*sol[3]/sp.exp(k*z)\n",
     "\n",
     "print('h component:')\n",
-    "sp.pprint(sp.simplify(sp.collect(sp.collect(sp.simplify(w.subs(b2,0)),b1),b2)) )\n",
+    "sp.pprint(sp.simplify(w.subs(b2,0).subs(b1,1).subs(z,0)))\n",
     "print('\\n s component:')\n",
-    "sp.pprint(sp.simplify(sp.collect(sp.collect(sp.simplify(w.subs(b1,0)),b1),b2)) )"
+    "sp.pprint(sp.simplify(w.subs(b1,0).subs(b2,1)))"
    ]
   },
   {
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -199,36 +202,38 @@
      "output_type": "stream",
      "text": [
       "h component:\n",
-      "     ⎛       2⋅k          2⋅k⋅z      2⋅k      2⋅k⋅z      2⋅k⋅(z + 1)        2⋅\n",
-      "b₁⋅k⋅⎝2⋅k⋅z⋅ℯ    + 2⋅k⋅z⋅ℯ      + z⋅ℯ    - z⋅ℯ      + z⋅ℯ            - z - ℯ  \n",
+      "⎛         2⋅k⋅z      2⋅k⋅z      2⋅k⋅(z + 1)                         2⋅k    2⋅k\n",
+      "⎝- 2⋅k⋅z⋅ℯ      + z⋅ℯ      - z⋅ℯ            + z + (-2⋅k⋅z - z + 1)⋅ℯ    - ℯ   \n",
       "──────────────────────────────────────────────────────────────────────────────\n",
-      "                                                2  2⋅k    4⋅k      2⋅k        \n",
-      "                                             4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    - 1    \n",
+      "                                           ⎛⎛   2    ⎞  2⋅k    4⋅k    ⎞       \n",
+      "                                         k⋅⎝⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1⎠       \n",
       "\n",
-      "k    2⋅k⋅z    2⋅k⋅(z + 1)    ⎞  k⋅(1 - z)\n",
-      "  + ℯ      - ℯ            + 1⎠⋅ℯ         \n",
-      "─────────────────────────────────────────\n",
-      "                                         \n",
-      "                                         \n",
+      "⋅z    2⋅k⋅(z + 1)    ⎞  k⋅(1 - z)\n",
+      "   + ℯ            - 1⎠⋅ℯ         \n",
+      "─────────────────────────────────\n",
+      "                                 \n",
+      "                                 \n",
       "\n",
       " s component:\n",
-      "     ⎛         2⋅k          2⋅k⋅(z + 1)        2⋅k        2⋅k⋅(z + 1)      4⋅k\n",
-      "b₂⋅k⋅⎝- 2⋅k⋅z⋅ℯ    - 2⋅k⋅z⋅ℯ            + 2⋅k⋅ℯ    + 2⋅k⋅ℯ            - z⋅ℯ   \n",
+      "⎛         2⋅k⋅(z + 1)        2⋅k⋅(z + 1)      4⋅k      2⋅k⋅z      2⋅k⋅(z + 1) \n",
+      "⎝- 2⋅k⋅z⋅ℯ            + 2⋅k⋅ℯ            - z⋅ℯ    + z⋅ℯ      - z⋅ℯ            \n",
       "──────────────────────────────────────────────────────────────────────────────\n",
-      "                                                 2  2⋅k    4⋅k      2⋅k       \n",
-      "                                              4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    - 1   \n",
+      "                                          ⎛⎛   2    ⎞  2⋅k    4⋅k    ⎞        \n",
+      "                                        k⋅⎝⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1⎠        \n",
       "\n",
-      "      2⋅k      2⋅k⋅z      2⋅k⋅(z + 1)⎞  -k⋅z\n",
-      " + z⋅ℯ    + z⋅ℯ      - z⋅ℯ           ⎠⋅ℯ    \n",
-      "────────────────────────────────────────────\n",
-      "                                            \n",
-      "                                            \n"
+      "                      2⋅k⎞  -k⋅z\n",
+      "+ (-2⋅k⋅z + 2⋅k + z)⋅ℯ   ⎠⋅ℯ    \n",
+      "────────────────────────────────\n",
+      "                                \n",
+      "                                \n"
      ]
     }
    ],
    "source": [
     "# coefficients from the elevation solution problem\n",
     "A,B,C,D = sol\n",
+    "\n",
+    "alpha = sp.Symbol('alpha')          #ik_x\n",
     "\n",
     "wb = (A+B)/k                                    # w at z=0\n",
     "wh = (A*expk + B/expk + k*expk*C + k*D/expk)/k        # w at z=H\n",
@@ -247,9 +252,9 @@
     "\n",
     "Pzh = wzzh - wz0*k*(expk-1/expk)/2 - wzz0*(expk+1/expk)/2    # P_z(H)\n",
     "\n",
-    "b3 = -(k*wh + Pzh/k)                                 # first rhs vector entry\n",
+    "b3 = -(k*wh + Pzh/k)*(alpha/k**2)                                 # first rhs vector entry\n",
     "\n",
-    "b4 = -(k*wb)                                         # 2nd rhs vector entry\n",
+    "b4 = -(k*wb)*(alpha/k**2)                                          # 2nd rhs vector entry\n",
     "\n",
     "# Matrix for horizontal surface velocity solutions\n",
     "M2 = sp.Matrix(( [expk, -1/expk],[1, -1]))\n",
@@ -263,7 +268,6 @@
     "sol2, = sp.linsolve((M2,d),[E,F])\n",
     "\n",
     "\n",
-    "uh = Ph + sol2[0]*expk + sol2[1]/expk\n",
     "\n",
     "wz = A*sp.exp(k*z) - B*sp.exp(-k*z) + C*(1+k*z)*sp.exp(k*z)+ D*(1-k*z)*sp.exp(-k*z)\n",
     "\n",
@@ -273,13 +277,13 @@
     "\n",
     "P = wz -wz0*coshkz- wzz0*sinhkz/k\n",
     "\n",
-    "u = P + sol2[0]*sp.exp(k*z) + sol2[1]*sp.exp(-k*z)\n",
+    "u = P*(alpha/k**2)  + sol2[0]*sp.exp(k*z) + sol2[1]*sp.exp(-k*z)\n",
     "\n",
     "## print velocity response functions\n",
     "print('h component:')\n",
-    "sp.pprint(sp.simplify((sp.collect(sp.collect(u.subs(b2,0),b1),b2))))\n",
+    "sp.pprint(sp.collect(sp.collect(sp.simplify(-u.subs(b2,0).subs(b1,1).subs(alpha,1)),expk),1-z))\n",
     "print('\\n s component:')\n",
-    "sp.pprint(sp.simplify((sp.collect(sp.collect(u.subs(b1,0),b1),b2))))"
+    "sp.pprint(sp.collect(sp.collect(sp.simplify(u.subs(b1,0).subs(b2,1).subs(alpha,1)),expk),1-z))"
    ]
   },
   {
