added extensional background state option

--- a/notebooks/0_Algebra.ipynb
+++ b/notebooks/0_Algebra.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,7 +12,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,25 +34,30 @@
     "\n",
     "b1 = sp.Symbol('b1')                # proportional to -h\n",
     "b2 = sp.Symbol('b2')                # proportional to delta*s\n",
+    "e0 = sp.Symbol('e0')                # constant \n",
+    "e1 = sp.Symbol('e1')                # constant \n",
+    "\n",
+    "Delta = sp.Symbol('Delta')\n",
+    "\n",
     "\n",
     "# solution vector\n",
     "A,B,C,D = sp.symbols('A,B,C,D')\n",
     "\n",
     "# rhs vector:\n",
-    "b = sp.Matrix(4,1,[b1,0,0,b2])\n",
+    "b = sp.Matrix(4,1,[b1,-e0*k*b1,e1*k*b2,b2])\n",
     "\n",
     "sol, = sp.linsolve((M,b),[A,B,C,D])\n",
     "\n",
-    "# vertical velocity at upper surface of ice sheet\n",
+    "# vertical velocity at upper surface of ice sheet (modulo 1/k factor)\n",
     "w_h = expk*sol[0] + (1/expk)*sol[1] + k*expk*sol[2] + (k/expk)*sol[3]\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Print the vertical velocity at the upper surface in terms of $h$ and $s$:"
+    "Print relaxation and buoyancy transfer functions\n",
+    "(the extension-related terms have the e_0 and e_1 on them):"
    ]
   },
   {
@@ -66,35 +69,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         2⋅k    4⋅k       \n",
-      "  - 4⋅k⋅ℯ    - ℯ    + 1   \n",
-      "──────────────────────────\n",
-      "⎛   2    ⎞  2⋅k    4⋅k    \n",
-      "⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1\n",
-      "  ⎛               2⋅k    ⎞  k\n",
-      "2⋅⎝-k + (-k - 1)⋅ℯ    + 1⎠⋅ℯ \n",
-      "─────────────────────────────\n",
-      "  ⎛   2    ⎞  2⋅k    4⋅k     \n",
-      "  ⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1 \n"
+      "R = \n",
+      "⎛        3      ⎞  2⋅k    4⋅k    \n",
+      "⎝- 4⋅e₀⋅k  - 4⋅k⎠⋅ℯ    - ℯ    + 1\n",
+      "─────────────────────────────────\n",
+      "    ⎛   2    ⎞  2⋅k    4⋅k       \n",
+      "    ⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1   \n",
+      "\n",
+      " \n",
+      " B = \n",
+      "  ⎛   ⎛   2  2⋅k    2⎞                 2⋅k    ⎞  k\n",
+      "2⋅⎝e₁⋅⎝- k ⋅ℯ    + k ⎠ - k + (-k - 1)⋅ℯ    + 1⎠⋅ℯ \n",
+      "──────────────────────────────────────────────────\n",
+      "            ⎛   2    ⎞  2⋅k    4⋅k                \n",
+      "            ⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1            \n"
      ]
     }
    ],
    "source": [
+    "# # print the formulas (modulo a 1/k factor):\n",
     "\n",
-    "# # print the result (modulo a H/k factor) for floating ice:\n",
-    "#sp.pprint(sp.collect(sp.collect(sp.collect(sp.simplify(w_h),b1),b2),expk) )\n",
-    "R = sp.collect(sp.simplify(w_h.subs(b1,1).subs(b2,0)),expk)\n",
+    "# print the coefficient on h\n",
+    "R = sp.collect(sp.collect(sp.simplify(w_h.subs(b1,1).subs(b2,0)),expk),e0)\n",
+    "print('R = ')\n",
     "sp.pprint(R)\n",
-    "B = sp.collect(sp.simplify(-w_h.subs(b1,0).subs(b2,1)),expk)\n",
+    "\n",
+    "# print the coefficient on delta*s\n",
+    "B = sp.collect(sp.collect(sp.simplify(-w_h.subs(b1,0).subs(b2,1)),e1),expk)\n",
+    "print('\\n \\n B = ')\n",
     "sp.pprint(B)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Print the vertical velocity at the lower surface in terms of $h$ and $s$:"
    ]
   },
   {
@@ -106,26 +109,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   ⎛           k               3⋅k⎞      ⎛     2⋅k    4⋅k    ⎞\n",
-      "b₁⋅⎝(2 - 2⋅k)⋅ℯ  + (-2⋅k - 2)⋅ℯ   ⎠ + b₂⋅⎝4⋅k⋅ℯ    + ℯ    - 1⎠\n",
-      "──────────────────────────────────────────────────────────────\n",
-      "                  ⎛   2    ⎞  2⋅k    4⋅k                      \n",
-      "                  ⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1                  \n"
+      "B = \n",
+      "  ⎛   ⎛   2  2⋅k    2⎞                 2⋅k    ⎞  k\n",
+      "2⋅⎝e₀⋅⎝- k ⋅ℯ    + k ⎠ - k + (-k - 1)⋅ℯ    + 1⎠⋅ℯ \n",
+      "──────────────────────────────────────────────────\n",
+      "            ⎛   2    ⎞  2⋅k    4⋅k                \n",
+      "            ⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1            \n",
+      "\n",
+      " \n",
+      " R = \n",
+      "⎛        3      ⎞  2⋅k    4⋅k    \n",
+      "⎝- 4⋅e₁⋅k  - 4⋅k⎠⋅ℯ    - ℯ    + 1\n",
+      "─────────────────────────────────\n",
+      "    ⎛   2    ⎞  2⋅k    4⋅k       \n",
+      "    ⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1   \n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "# Also need to print w_b for floating ice, since it is part of the solution\n",
-    "# (modulo a H/k factor)\n",
+    "# # print the formulas (modulo a 1/k factor):\n",
     "w_b = sol[0]+sol[1]\n",
     "\n",
-    "# # print this:\n",
-    "sp.pprint(sp.collect(sp.collect(sp.collect(sp.simplify(w_b),b1),b2),expk) )"
+    "# print the coefficient on h\n",
+    "B = sp.collect(sp.collect(sp.simplify(w_b.subs(b1,1).subs(b2,0)),e0),expk)\n",
+    "print('B = ')\n",
+    "sp.pprint(B)\n",
+    "\n",
+    "# print the coefficient on delta*s\n",
+    "R = sp.collect(sp.collect(sp.simplify(-w_b.subs(b1,0).subs(b2,1)),e1),expk)\n",
+    "print('\\n \\n R = ')\n",
+    "sp.pprint(R)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,7 +149,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,11 +165,17 @@
      "output_type": "stream",
      "text": [
       "h component:\n",
-      "  ⎛     2⋅k        2⋅k    ⎞  k\n",
-      "2⋅⎝- k⋅ℯ    - k - ℯ    + 1⎠⋅ℯ \n",
-      "──────────────────────────────\n",
-      "   2  2⋅k    4⋅k      2⋅k     \n",
-      "4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    - 1 \n",
+      "⎛      ⎛     2⋅k    2⋅k    ⎞      2⋅k       ⎛    ⎛       2⋅k    ⎞      2⋅k    \n",
+      "⎝- k⋅z⋅⎝2⋅k⋅ℯ    + ℯ    - 1⎠ - k⋅ℯ    - k + ⎝k⋅z⋅⎝2⋅k + ℯ    - 1⎠ - k⋅ℯ    - k\n",
+      "──────────────────────────────────────────────────────────────────────────────\n",
+      "                                                2  2⋅k    4⋅k      2⋅k        \n",
+      "                                             4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    - 1    \n",
+      "\n",
+      "    2⋅k    ⎞  2⋅k⋅z    2⋅k    ⎞  -k⋅z + k\n",
+      " - ℯ    + 1⎠⋅ℯ      - ℯ    + 1⎠⋅ℯ        \n",
+      "─────────────────────────────────────────\n",
+      "                                         \n",
+      "                                         \n",
       "\n",
       " s component:\n",
       "⎛⎛     2       ⎛       2⋅k    ⎞          2⋅k    ⎞  2⋅k   ⎛   2  2⋅k       ⎛   \n",
@@ -179,13 +200,12 @@
     "w = sp.exp(k*z)*sol[0] + (1/sp.exp(k*z))*sol[1] + k*z*sp.exp(k*z)*sol[2] + k*z*sol[3]/sp.exp(k*z)\n",
     "\n",
     "print('h component:')\n",
-    "sp.pprint(sp.simplify(w.subs(b2,0).subs(b1,1).subs(z,0)))\n",
+    "sp.pprint(sp.simplify(w.subs(b2,0).subs(b1,1).subs(e1,0).subs(e0,0)))\n",
     "print('\\n s component:')\n",
-    "sp.pprint(sp.simplify(w.subs(b1,0).subs(b2,1)))"
+    "sp.pprint(sp.simplify(w.subs(b1,0).subs(b2,1).subs(e1,0).subs(e0,0)))"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,6 +251,7 @@
    ],
    "source": [
     "# coefficients from the elevation solution problem\n",
+    "sol = sol.subs(e1,0).subs(e0,0) # set extensional terms to zero\n",
     "A,B,C,D = sol\n",
     "\n",
     "alpha = sp.Symbol('alpha')          #ik_x\n",
@@ -287,7 +308,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -295,7 +315,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -340,7 +359,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -354,10 +373,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.6"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
